--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ArtiomTr/jest-coverage-report-action@v2
         with:
-            test-script: npm test:coverage
+            test-script: npm run test:coverage
             threshold: 80
             coverage-file: coverage/coverage-final.json
+            output: comment, report-markdown
